--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 <div class="header-bottom">
                                     <h1> <strong> Hello! </strong></h1>
                                     <h3>I'm Samson Ogunbambi</h3>
-                                    <h3 style="font-size:30px; color: #f01616;font-weight: 700;">A Profressional Graphics & UI Designer.</h3>
+                                    <h3 style="font-size:18px; color: #870000;font-weight: 700;">A Profressional Graphics & UI Designer.</h3>
                                     <div class="ps-section__content" style="margin: 30px"></div>
 
                                     <button class="button button1"><a href="SAMPORTFOLIO.pdf">Click to view my portfolio...</a></button>
@@ -96,14 +96,15 @@
                                         .button {
                                           border: round;
                                           color: white;
-                                          padding: 15px 32px;
+                                          padding: 5px 8px;
                                           text-align: center;
                                           text-decoration: none;
                                           display: inline-block;
-                                          font-size: 18px;
+                                          font-size: 14px;
                                           margin: 4px -5px;
                                           cursor: pointer;
                                         }
+                                        
                                         
                                         .button1 {background-color: #000000;} 
                                         </style>
