--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                                         }
                                         .button {
                                           border: round;
+                                          border-radius: 5px;
                                           color: white;
                                           padding: 5px 8px;
                                           text-align: center;
