--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                         .button {
                                           border: round;
                                           border-radius: 5px;
-                                          color: white;
+                                          color: black;
                                           padding: 5px 8px;
                                           text-align: center;
                                           text-decoration: none;
@@ -107,7 +107,7 @@
                                         }
                                         
                                         
-                                        .button1 {background-color: #000000;} 
+                                        .button1 {background-color: #0000;} 
                                         </style>
                                     <h2></h2>
                                 </div>
