--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
                                         .button {
                                           border: round;
                                           border-radius: 5px;
+                                          border-color: #000000;
                                           color: black;
-                                          padding: 5px 15px;
+                                          padding: 8px 15px;
                                           text-align: center;
                                           text-decoration: none;
                                           display: inline-block;
