--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             whatsapp: "+2348034796956", // WhatsApp number
             call_to_action: "", // Call to action
             button_color: "#FF6550", // Color of button
-            position: "left", // Position may be 'right' or 'left'
+            position: "right", // Position may be 'right' or 'left'
             pre_filled_message: "Hello, I need your service, I am", // WhatsApp pre-filled message
         };
         var proto = 'https:', host = "getbutton.io", url = proto + '//static.' + host;
